--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "d3-contour": "^4.0.2",
     "heatmap.js": "^2.0.5",
     "lucide-react": "^0.525.0",
+    "plotly.js-dist-min": "^3.0.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-heatmap-grid": "^0.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
